<resources>
    <string name="app_name">Open Radio</string>
    <string name="app_name_user_agent">OpenRadio</string>
    <string name="about_exo_title">Playback is powered by:</string>
    <string name="about_exo_text">ExoPlayer</string>
    <string name="about_exo_url">https://github.com/google/ExoPlayer</string>
    <string name="logs_title_send_logs_chooser">Send Logs by:</string>
    <string name="logs_sent_msg">Logs are sent</string>
    <string name="logs_label_app">Application Logs</string>
    <string name="logs_label_enable">Enable Logs\n(enables application to save logs in a file)</string>
    <string name="logs_label_send">Send Logs</string>
    <string name="logs_label_clear">Clear Logs</string>
    <string name="main_menu_logs">Logs</string>
    <string name="logs_can_not_zip">Can not ZIP Logs</string>
    <string name="logs_can_not_send">Can not send Logs</string>
    <string name="logs_mail_body_header">Archive with logs is in attachment.</string>
    <string name="about_thanks_1">This project is use the Community Radio Browser API - a service that provides a list of radio stations broadcasting their live stream on the Internet:</string>
    <string name="about_thanks_1_title">Community Radio Browser API</string>
    <string name="about_thanks_1_url">http://www.radio-browser.info/webservice</string>
    <string name="about_thanks_2">Graphics are provided by:</string>
    <string name="about_thanks_2_title">Google</string>
    <string name="about_thanks_2_url">Vector assets from Android Studio</string>
    <string name="about_author">Author:</string>
    <string name="about_author_name">Yurii Chernyshov</string>
    <string name="about_project_home_title">Project home:</string>
    <string name="about_project_home_desc">If you have any requests, suggestions, comments that can improve the application - please do not hesitate create an Issue in the Issues tab of the project\'s home page.</string>
    <string name="about_playlist_title">Playlist is parsed by:</string>
    <string name="about_playlist_name">"Java Playlist Parser" of William Seemann</string>
    <string name="about_playlist_url">https://github.com/wseemann/JavaPlaylistParser</string>
    <string name="about_offline_countries_boundaries_title">Offline counties boundaries are provided by:</string>
    <string name="about_offline_countries_boundaries_name">Tobias Zwick</string>
    <string name="about_offline_countries_boundaries_url">https://github.com/westnordost/countryboundaries</string>
    <string name="enable_last_known_radio_station_label">Play last known Radio Station\n(enables application to play last known Radio Station automatically on start)</string>
    <string name="bt_auto_restart_descr">Resume playback when re-connected to the same Bluetooth Device</string>
    <string name="custom_user_agent_label">Custom User Agent:</string>
    <string name="custom_user_agent_hint">Custom User Agent empty</string>
    <string name="user_agent_empty_warning">User Agent can not be empty</string>
    <string name="user_agent_can_not_apply">Can not apply User Agent</string>
    <string name="settings_master_volume">Master sound volume:</string>
    <string name="min_buff_description">Minimum duration of media that the player will attempt to ensure is buffered at all times, in milliseconds</string>
    <string name="max_buffer_description">Maximum duration of media that the player will attempt to buffer, in milliseconds</string>
    <string name="playback_buffer_description">Duration of media that must be buffered for playback to start or resume, in milliseconds</string>
    <string name="playback_buffer_after_rebuffer_description">Duration of media that must be buffered for playback to resume after a re-buffer, in milliseconds</string>
    <string name="restore_default">Restore Default</string>
    <string name="ok_label">OK</string>
    <string name="buffering">Buffering</string>
    <string name="buffering_infinite">Buffering…</string>
    <string name="no_network_connection_toast">No network connection found</string>
    <string name="google_drive_error_when_save">Error while save Radio Stations to Google Drive</string>
    <string name="google_drive_error_when_read">Error while read Radio Stations from Google Drive</string>
    <string name="google_drive_data_saved">Radio Stations are saved to Google Drive</string>
    <string name="google_drive_data_read">Radio Stations are read from Google Drive</string>
    <string name="can_not_get_account_name">Can not get Google Account name</string>
    <string name="category_empty">Category is empty</string>
    <string name="google_drive">Google Drive</string>
    <string name="google_drive_init_warning">Initial connection may take a long time.</string>
    <string name="google_drive_upload_info">Upload Favorites and Local added Radio Stations to Google Drive.\nNOTE: This operation will overwrite Radio Stations uploaded previously!</string>
    <string name="upload">Upload</string>
    <string name="google_drive_download_info">Download Favorites and Local added Radio Stations from Google Drive.</string>
    <string name="can_not_play_station">Can not play Station</string>
    <string name="media_stream_error">Media Stream Error</string>
    <string name="media_stream_http_403">Media Stream is Forbidden</string>
    <string name="media_stream_http_404">Media Stream is Not Found</string>
    <string name="no_data_message">No data received</string>
    <string name="no_metadata">No Metadata</string>
    <string name="favorite">Favorite</string>
    <string name="favorites_list_title">Favorites</string>
    <string name="new_stations_title">New</string>
    <string name="popular_stations_title">Popular</string>
    <string name="all_categories_title">Categories</string>
    <string name="countries_list_title">Countries</string>
    <string name="local_radio_stations_list_title">Locals</string>
    <string name="error_loading_media">Error Loading Media</string>
    <string name="app_settings_title">Application Settings</string>
    <string name="stream_buffering_label">@string/buffering</string>
    <string name="stream_buffering_descr">Restart playback when values are changed\nRange is %1$d - %2$d milliseconds\n(%3$d second - %4$d minutes)</string>
    <string name="invalid_buffer_desc">Invalid value of buffer : </string>
    <string name="can_not_skip">Can not skip</string>
    <string name="no_search_results">No search results</string>
    <string name="label_previous">Previous</string>
    <string name="label_next">Next</string>
    <string name="label_pause">Pause</string>
    <string name="label_play">Play</string>
    <string name="eq_label">Equalizer</string>
    <string name="search_label">Search</string>
    <string name="content_description_category_icon">Category Icon</string>
    <string name="search_description">Type the word that you want to use as the search pattern</string>
    <string name="add_station_dialog_title">Add Radio Station</string>
    <string name="add_station_dialog_button_label">Add</string>
    <string name="cancel_label">Cancel</string>
    <string name="remove_station_dialog_button_label">Remove</string>
    <string name="remove_station_dialog_main_text">You are going to remove Radio Station:\n%s\nAre You sure?</string>
    <string name="add_station_home_page_label">Home page:</string>
    <string name="add_station_home_page_hint">Radio Station\'s home page</string>
    <string name="add_station_name_label">Name:</string>
    <string name="add_station_name_hint">Radio Station\'s name</string>
    <string name="add_station_url_label">Stream URL:</string>
    <string name="add_station_url_hint">Radio Station\'s stream</string>
    <string name="add_station_image_label">Local Image:</string>
    <string name="add_station_web_image_label">Web Image:</string>
    <string name="add_station_image_hint">Radio Station\'s image for Local</string>
    <string name="add_station_web_image_hint">Radio Station\'s web image for Server</string>
    <string name="add_station_genre_label">Genre:</string>
    <string name="add_station_country_label">Country:</string>
    <string name="ellipsis">…</string>
    <string name="can_not_open_file">Can not open File</string>
    <string name="storage_permission_proposed">Storage permission is optional and is needed to get access to icon associated with Radio Station</string>
    <string name="record_audio_permission_proposed">Record Audio permission is needed to perform voice search</string>
    <string name="download">Download</string>
    <string name="add_to_fav_string">Add to Favorites</string>
    <string name="add_to_srvr_string">Add to Server</string>
    <string name="edit_station_dialog_title">Edit Radio Station</string>
    <string name="edit_station_dialog_button_label">Edit</string>
    <string name="can_not_edit_station_label">Can not edit Radio Station</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="equalizer_presets_label">System presets:</string>
    <string name="eq_not_available">Equalizer is not available</string>
    <string name="notification_str">Notification</string>
    <string name="radio_station_str">Radio Station</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="main_menu_general">General</string>
    <string name="main_menu_buffering">@string/buffering</string>
    <string name="main_menu_google_drive">Google Drive</string>
    <string name="main_menu_about">About</string>
    <string name="main_menu_sleep_timer">Sleep Timer</string>
    <string name="easy_swipe_title">Swipe effect on list is based on:</string>
    <string name="easy_swipe_name">Easy Swipe Maker</string>
    <string name="easy_swipe_url">https://github.com/xenione/swipe-maker</string>
    <string name="min_buffer_greater_max_buffer">Min Buffer is greater than Max Buffer</string>
    <string name="play_buffer_greater_min_buffer">Play Buffer is greater than Min Buffer</string>
    <string name="play_re_buffer_greater_min_buffer">Play Re-Buffer is greater than Min Buffer</string>
    <string name="radio_station">radio station</string>
    <string name="radio_stations">radio stations</string>
    <string name="cache_desc_text">Browse requests to the service are cached for one day.\nTap to clear now:</string>
    <string name="clear_cache_lbl">Clear cache</string>
    <string name="clear_completed">Cache is cleared</string>
    <string name="media_description_default">Live stream</string>
    <string name="location_access_proposed">Location access is optional to display radio stations of a country.</string>
    <string name="google_drive_error_msg_1">Can not request account, dialog is closed.</string>
    <string name="google_drive_error_msg_2">Can not sign in account, dialog is closed.</string>
    <string name="google_drive_error_msg_3">Can not upload to Google Drive.</string>
    <string name="google_drive_error_msg_4">Can not download from Google Drive.</string>
    <string name="allowed_caller_log">
        Caller has a valid certificate, but its package doesn\'t match any expected package for the
        given certificate. To allow this caller, add the following to the allowed callers list:\n
        <![CDATA[
        <signature name=\"%1$s\" package=\"%2$s\">\n\t<key>%3$s</key>\n</signature>\n
        ]]>
    </string>
    <string name="default_country_label">Default country:</string>
    <string name="default_country_use_location">Use Location</string>
    <string name="date_lbl">Date</string>
    <string name="time_lbl">Time</string>
    <string name="can_not_set_time">Can not set Time</string>
    <string name="can_not_set_date">Can not set Date</string>
</resources>