<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/add_edit_station_dialog_root">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/add_station_name_label"/>

        <EditText
            android:id="@+id/add_edit_station_name_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_station_name_hint"
            android:singleLine="true"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/add_station_home_page_label"/>

        <EditText
            android:id="@+id/add_edit_station_home_page_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_station_home_page_hint"
            android:singleLine="true"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/add_station_url_label"/>

        <EditText
            android:id="@+id/add_edit_station_stream_url_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_station_url_hint"
            android:layout_marginBottom="15dp"
            android:singleLine="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/add_station_image_label"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/add_edit_station_image_url_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_station_image_hint"
                android:layout_marginBottom="15dp"
                android:singleLine="true"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/add_edit_station_image_browse_btn"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ellipsis"/>

        </LinearLayout>

        <TextView
            android:id="@+id/add_edit_station_web_image_url_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:enabled="false"
            android:text="@string/add_station_web_image_label"/>

        <EditText
            android:id="@+id/add_edit_station_web_image_url_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_station_web_image_hint"
            android:layout_marginBottom="15dp"
            android:enabled="false"
            android:singleLine="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/add_station_genre_label_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                android:text="@string/add_station_genre_label"/>

            <TextView
                android:id="@+id/add_station_country_label_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:text="@string/add_station_country_label" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="15dp">

            <Spinner
                android:id="@+id/add_station_genre_spin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"/>

            <Spinner
                android:id="@+id/add_edit_station_country_spin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/add_to_fav_check_view"
                android:text="@string/add_to_fav_string"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <CheckBox
                android:id="@+id/add_to_srvr_check_view"
                android:text="@string/add_to_srvr_string"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/add_edit_station_dialog_cancel_btn_view"
                android:text="@string/cancel_label"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <ProgressBar
                android:id="@+id/add_edit_station_dialog_progress_bar_view"
                style="@android:style/Widget.ProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:visibility="invisible"/>

            <Button
                android:id="@+id/add_edit_station_dialog_add_btn_view"
                android:text="@string/add_station_dialog_button_label"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
