<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright 2020 The "Open Radio" Project. Author: Chernyshov Yuriy

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

        http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/dialog_general_settings_root"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minWidth="600dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialog_settings_title_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <CheckBox
            android:id="@+id/settings_dialog_enable_last_known_radio_station_check_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/enable_last_known_radio_station_label"/>

        <CheckBox
            android:id="@+id/bt_auto_restart_check_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/bt_auto_restart_descr"/>

        <CheckBox
            android:id="@+id/user_agent_check_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/custom_user_agent_label"/>

        <EditText
            android:id="@+id/user_agent_input_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:hint="@string/custom_user_agent_hint"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/settings_master_volume"
            android:textSize="20sp"/>

        <SeekBar
            android:id="@+id/master_vol_seek_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:max="100"
            android:paddingTop="10dp"/>

    </LinearLayout>

</ScrollView>